# HyperscaleES

./: Dockerfile  README.org  pyproject.toml  pytest.ini
benchmarks/: GPU_PROFILING_ANALYSIS.md  README.md  __init__.py  anatomy_profile_20251230_181509.json  benchmark_batched_forward.py  benchmark_cartpole.py  benchmark_dict_api.py  benchmark_triton_integration.py  cartpole_results_20251228_163913.json  cartpole_results_20251228_163956.json  cartpole_results_20251228_164545.json  cartpole_results_20251228_164622.json  cartpole_results_20251228_164853.json  cartpole_results_20251228_190847.json  cartpole_results_20251228_192006.json  cartpole_results_20251228_193813.json  cartpole_results_20251228_193941.json  cartpole_results_20251228_194644.json  cartpole_results_20251228_194644.md  cartpole_results_20251228_195120.json  cartpole_results_20251228_195120.md  cartpole_results_20251228_195345.json  cartpole_results_20251228_195345.md  cartpole_results_20251230_172002.md  compile_experiments.py  experiment_a_results_20251231_140556.json  experiment_a_results_20251231_140727.json  experiment_a_throughput.py  experiment_b_gpu_env.py  experiment_b_results_20251231_141112.json  experiment_c_results_20251231_141209.json  experiment_c_supervised.py  experiment_hyperscale.py  experiment_trm_comparison.py  experiment_trm_throughput.py  gpu_profile_20251230_180254.json  hyperscale_results_20251231_172918.json  hyperscale_results_20251231_203407.json  hyperscale_results_20251231_220858.json  investigate_sample_efficiency.py  (+30 more)
docs/: TORCH_EGGROLL_STATUS.md
tests/: README.md  (+9 more)
(+63 files in other folders)
